WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
162328
Fix enumeration of properties cross origin
https://bugs.webkit.org/show_bug.cgi?id=162328
Summary
Fix enumeration of properties cross origin
Chris Dumez
Reported
2016-09-20 18:46:32 PDT
All cross origin properties for Window / Location are supposed to be not enumerable: -
https://html.spec.whatwg.org/#crossorigingetownpropertyhelper-(-o,-p
-) Therefore, there should be no properties to iterate on for cross origin Window / Location objects. W3C test: -
http://w3c-test.org/html/browsers/origin/cross-origin-objects/cross-origin-objects.html
([[Enumerate]] subtest)
Attachments
Patch
(5.04 KB, patch)
2016-09-20 18:51 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2016-09-20 18:51:09 PDT
Created
attachment 289423
[details]
Patch
Alex Christensen
Comment 2
2016-09-21 12:52:57 PDT
Comment on
attachment 289423
[details]
Patch Are both of the changes covered by the one test?
Chris Dumez
Comment 3
2016-09-21 12:53:58 PDT
(In reply to
comment #2
)
> Comment on
attachment 289423
[details]
> Patch > > Are both of the changes covered by the one test?
Yes, this test iterates both on Window and Location.
Chris Dumez
Comment 4
2016-09-21 13:49:15 PDT
Comment on
attachment 289423
[details]
Patch Clearing flags on attachment: 289423 Committed
r206233
: <
http://trac.webkit.org/changeset/206233
>
Chris Dumez
Comment 5
2016-09-21 13:49:21 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug