Fix enumeration of properties cross origin https://bugs.webkit.org/show_bug.cgi?id=162328

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Rebaseline W3C test now that one more check is passing.

* web-platform-tests/html/browsers/origin/cross-origin-objects/cross-origin-objects-expected.txt:

Source/WebCore:

All cross origin properties for Window / Location are supposed to be not enumerable:
- https://html.spec.whatwg.org/#crossorigingetownpropertyhelper-(-o,-p-)

Therefore, there should be no properties to iterate on for cross origin Window /
Location objects.

No new tests, rebaselined existing test.

* bindings/js/JSDOMWindowCustom.cpp:
(WebCore::JSDOMWindow::getOwnPropertyNames):
* bindings/js/JSLocationCustom.cpp:
(WebCore::JSLocation::getOwnPropertyNames):

Canonical link: https://commits.webkit.org/180379@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206233 268f45cc-cd09-0410-ab3c-d52691b4dbfc